force-app/main/default/objects/Policy_Chunk__c/Policy_Chunk__c.object-meta.xml
<CustomObject>
    <label>Policy Chunk</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Policy Chunk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Chunks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>