force-app/main/default/objects/Policy_Chunk__c/fields/Chunk_Id__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Id__c</fullName>
    <externalId>true</externalId>
    <label>Chunk Id</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>