force-app/main/default/objects/Policy_Chunk__c/fields/Embedding_Key__c.field-meta.xml
<CustomField>
    <fullName>Embedding_Key__c</fullName>
    <label>Embedding Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>