force-app/main/default/objects/Policy_Chunk__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <label>Keywords</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>