force-app/main/default/objects/Policy_Chunk__c/fields/Policy_Document__c.field-meta.xml
<CustomField>
    <fullName>Policy_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Document</label>
    <referenceTo>Policy_Document__c</referenceTo>
    <relationshipLabel>Policy Chunks</relationshipLabel>
    <relationshipName>Policy_Chunks</relationshipName>
    <type>Lookup</type>
</CustomField>