force-app/main/default/objects/Policy_Chunk__c/fields/Source_Ref__c.field-meta.xml
<CustomField>
    <fullName>Source_Ref__c</fullName>
    <label>Source Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>